@@ -1,3 +1,8 @@
+2007-12-16  Paolo Borelli  <pborelli@katamail.com>
+
+	* plugins/gedit-file-browser-store.c: use utility function to get the
+	icon, so that we do not include libgnome headers.
+
 2007-12-15  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit-commands-file.c: fix off by one in goto_line when
